# geo3dfeatures

./: .flake8  .flake8rc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALL.fr.md  LICENSE  README.md  pyproject.toml  pytest.ini  time-measurement.sh
config/: base.ini  bin.config  lowrgblowbin.ini  lowrgbnobin.ini  lowz.ini  nobin.ini  noz.ini  rgb.ini  rgblowbin.ini  rgbnobin.ini  z.ini
data/190305/timers/: timers.csv
data/190306/timers/: timers.csv
data/base/timers/: timers.csv
data/output/190306/timers/: timers.csv
data/output/scipytree/timers/: timers.csv
data/profiling/accidx/timers/: timers.csv
data/query/timers/: timers.csv
data/timers/: timers.csv
docs/: features.md  geolithe_datasets.md  pipeline.md  test_fixtures.md
examples/: advanced_timing_study.ipynb  example.py  geolithe-classifier.ipynb  kmean.py  pombourg-classification-weak-supervision.ipynb  pombourg-classification.ipynb  post_traitement.ipynb  profiling.py  sample.py  timers.ipynb
examples/features-study/: escale-features-study.ipynb  pombourg-features-study.ipynb
geo3dfeatures/: __init__.py  classification.py  extract.py  features.py  fixtures.py  io.py  postprocess.py
geo3dfeatures/tools/: __init__.py  __main__.py  featurize.py  index.py  info.py  kmean.py  predict.py  profiling.py  sample.py  train.py
tests/: conftest.py  test_classification.py  test_extract.py  test_features.py  test_geo3dfeatures.py  test_io.py  test_kmean.py  test_postprocess.py  test_train.py
tests/config/: base.ini  bin.ini  wrong.ini
tests/data/input/: b9_ground.ply  b9_roof.ply  b9_vegetation.ply  test.las  test.xyz
tests/data/output/b9/: kd-tree-leaf-100.pkl
tests/data/output/b9/features/: features_ground.h5  features_roof.h5  features_vegetation.h5
