[tool.poetry]
name = "geo3dfeatures"
version = "0.1.0"
description = "Extract geometry features from 3D point clouds"
license = "MIT"
authors = ["Damien Garaud <damien.garaud@oslandia.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.15"
dask = "^0.20.2"
pandas = "^0.23.4"
scikit-learn = "^0.20.1"
laspy = "^1.5.1"
plyfile = "^0.7.0"
scipy = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.6"
ipdb = "^0.11.0"
seaborn = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
sample = "geo3dfeatures.tools.sample:main"
featurize = "geo3dfeatures.tools.featurize:main"
profile = "geo3dfeatures.tools.profiling:main"
cluster = "geo3dfeatures.tools.kmean:main"