[tool.poetry]
name = "geo3dfeatures"
version = "0.4.0"
description = "Extract geometry features from 3D point clouds"
license = "BSD-3-Clause"
authors = ["Damien Garaud <damien.garaud@oslandia.com>", "Raphaël Delhome <raphael.delhome@oslandia.com>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries",
]

# see versions and constraints https://poetry.eustace.io/docs/versions/
[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.15"
dask = "^0.20.2"
pandas = "^0.23.4"
scikit-learn = "^0.21"
laspy = "^1.5.1"
plyfile = "^0.7.0"
scipy = "^1.2"
tqdm = "^4.31.1"
daiquiri = "^1.5.0"
tables = "^3.5"
plotly = "^4.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.6"
ipdb = "^0.11.0"
seaborn = "^0.9.0"
notebook = "^6.0"
pre-commit = "^1.18"

[tool.poetry.scripts]
geo3d = "geo3dfeatures.tools.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
